@@ -1,0 +1,7 @@
+(* TEST
+   exit_status = "2"
+*)
+
+let () = (
+    assert false
+  )
