@@ -1,0 +1,1 @@
+Fatal error: exception Assert_failure("assert_location.ml", 6, 4)
